end step save product

--- a/public/css/sb-admin-2.css
+++ b/public/css/sb-admin-2.css
@@ -259,6 +259,11 @@
     height: 10px;
     
   }
+  #Observation{
+    border-radius: 5px;
+    border: 0;
+    height: 90px;
+  }
 *,
 *::before,
 *::after {
