--- a/public/css/sb-admin-2.css
+++ b/public/css/sb-admin-2.css
@@ -11658,7 +11658,14 @@ body.sidebar-toggled footer.sticky-footer {
     margin-right: .25rem !important;
 }
 
-.list-group-item.active:not(.disabled) {
+.li-user{
+  background: #348F50;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #56B4D3, #348F50);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #56B4D3, #348F50); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+
+.booking .list-group-item.active:not(.disabled) {
     border-color: #e7e7e7;
     background: #fff;
     color: #ac32e4;
